# bisection

./: Cargo.toml  README.md
examples/: numeric_table.rs  sorted_search.rs
src/: bisect.rs  lib.rs
