[package]
name = "bisection"
version = "0.1.0"
authors = ["Ben Steadman <steadmanben1@gmail.com>"]
description = "Rust implementation of the Python bisect module"
categories = ["algorithms", "data-structures"]
keywords = ["bisect", "sorting", "searching", "binary-search"]
repository = "https://github.com/SteadBytes/bisection"
homepage = "https://github.com/SteadBytes/bisection"
readme = "README.md"
license = "MIT"
edition = "2018"

[dev-dependencies]
proptest = "0.10.0"
